# euos25-solution

./: .gitignore  README.md  TASK.md  dev.md  discussion.md  main.py  pyproject.toml
configs/: catboost_trans_reg.yaml  catboost_trans_reg_optuna.yaml  focal_gamma3.yaml  full.yaml  full_catboost.yaml  full_catboost_optuna.yaml  full_chemberta_catboost.yaml  full_chemeleon.yaml  full_chemeleon_catboost.yaml  full_chemeleon_focal.yaml  full_chemeleon_lgbm.yaml  full_chemeleon_lgbm_focal.yaml  full_chemprop.yaml  full_chemprop_focal.yaml  full_chemprop_reg.yaml  full_cv.yaml  full_feat_catboost.yaml  full_feat_focal_optuna.yaml  full_feat_optuna.yaml  full_focal.yaml  full_focal_cv.yaml  full_focal_optuna.yaml  full_mordred_catboost.yaml  full_optuna.yaml  full_optuna_imbalance.yaml  full_randomforest.yaml  full_randomforest_optuna.yaml  full_unimol.yaml  full_unimol_focal.yaml  full_unimol_regression.yaml  lgbm_feat_reg_optuna.yaml  lgbm_reg_optuna.yaml  lgbm_trans_listmle.yaml  lgbm_trans_listmle_optuna.yaml  lgbm_trans_reg.yaml  lgbm_trans_reg_optuna.yaml  multitask_all_chemeleon.yaml  multitask_all_chemprop.yaml  multitask_all_chemprop_reg.yaml  multitask_fluo_chemeleon.yaml  (+10 more)
notebooks/: eval_oof_all_models.py  eval_oof_multitask_models.py  final_submission_composition.ipynb  optimize_ensemble.py  optimize_ensemble_stacking.py  optimize_ensemble_stacking_v2.py  optimize_ensemble_stacking_v3.py  optimize_ensemble_v2.py  precompute_similarity_matrix.py  submission.ipynb
scripts/: check_scores.py  check_scores.sh  explore_descriptor_encoding.py  infer_multitask.py  run.sh  (+9 more)
(+72 files in other folders)
