[project]
name = "euos25"
version = "0.1.0"
description = "EUOS25 Kaggle Competition - Absorption/Fluorescence Classification Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "rdkit>=2023.9.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "optuna>=4.5.0",
    "jupyterlab>=4.4.10",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "datamol>=0.12.0",
    "chemprop>=2.2.0",
    "lightning>=2.0.0",
    "torch>=2.0.0",
    "mordred>=1.2.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
